feed data into templates

--- a/client/views/templates/home.html
+++ b/client/views/templates/home.html
@@ -1,5 +1,6 @@
 ---
 name: home
+title: Homepage
 url: /
 ---
 
@@ -20,7 +21,7 @@ url: /
 
 <div class="row">
   <div class="large-12 columns">
-    <h2>Secondary Header</h2>
+    <h2>Secondary {{ name | title }}</h2>
   </div>
 </div>
 <div class="row">
